<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".Activity4">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/themes"
        android:layout_marginBottom="24dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@id/textview"
            android:hint="@string/theme"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@id/lightmode"
            android:hint="@string/lightmode"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            tools:ignore="ButtonSize,VisualLintButtonSize"
            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@id/darkmode"
            android:hint="@string/darkmode"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            tools:ignore="ButtonSize,VisualLintButtonSize"
            />
    </RadioGroup>

        <TextView
            android:id="@id/notification"
            android:hint="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="20sp"
            />

        <CheckBox
            android:id="@+id/pushnotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pushnotif"
            />

    <TextView
        android:id="@id/profile"
        android:hint="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/email"
        android:hint="@string/email"
        android:padding="15dp"
        android:ems="10"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/nickname"
        android:hint="@string/nickname"
        android:padding="15dp"
        android:ems="10"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@id/save"
        android:hint="@string/save"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/teal_200"
        />
</LinearLayout>